# trr

./: .goreleaser.yml  .tagpr  CHANGELOG.md  Cargo.toml  LICENSE  Makefile.toml  README.md  build.rs  rust-toolchain.toml
.github/actions/release/: action.yml
.github/workflows/: ci.yml  tagpr.yml
src/: config.rs  create.rs  delete.rs  main.rs
