[package]
name = "trr"
version = "0.1.1"
edition = "2024"

[[bin]]
name = "trr"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.40", features = ["derive"] }
dirs = "6.0.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
skim = "0.20.2"
toml = "0.8.23"
ulid = "1.2.1"
